// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginFormView > it renders Default and matches snapshots 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class="bg-white shadow rounded w-full p-10"
    >
      <div
        class=""
      >
        <div
          class=""
        >
          <h1
            aria-label="Login or Sign up"
            aria-level="1"
            class="text-2xl font-extrabold leading-6 text-gray-800"
          >
            Login or Sign up
          </h1>
          <div
            class="mt-4 w-full grid gap-y-4 "
          >
            <div>
              <div
                class="relative flex align-middle"
              >
                <label
                  class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                  for="email"
                >
                  Email
                  <input
                    aria-label="Email"
                    class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                    id="email"
                    name="email"
                    placeholder="Enter your email"
                    type="email"
                  />
                </label>
              </div>
              <ul
                class="mt-1"
              />
            </div>
          </div>
          <ul />
          <button
            aria-label="Login or Sign up"
            class="text-sm font-semibold leading-none text-white focus:outline-none flex justify-center items-center h-10 w-full bg-indigo-700 border rounded hover:bg-indigo-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 mt-4"
            type="submit"
          >
            Login or Sign up
          </button>
        </div>
      </div>
    </div>
  </div>
  ;
</DocumentFragment>
`;

exports[`LoginFormView > it renders Errors and matches snapshots 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class="bg-white shadow rounded w-full p-10"
    >
      <div
        class=""
      >
        <div
          class=""
        >
          <h1
            aria-label="Login or Sign up"
            aria-level="1"
            class="text-2xl font-extrabold leading-6 text-gray-800"
          >
            Login or Sign up
          </h1>
          <div
            class="mt-4 w-full grid gap-y-4 "
          >
            <div>
              <div
                class="relative flex align-middle"
              >
                <label
                  class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                  for="email"
                >
                  Email
                  <input
                    aria-label="Email"
                    class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                    id="email"
                    name="email"
                    placeholder="Enter your email"
                    type="email"
                  />
                </label>
              </div>
              <ul
                class="mt-1"
              >
                <li>
                  <small
                    class="text-red-500"
                  >
                    Please enter your email
                  </small>
                </li>
              </ul>
            </div>
          </div>
          <ul>
            <li
              class="mt-1"
            >
              <small
                class="text-red-500"
              >
                Invalid email or password
              </small>
            </li>
            <li
              class="mt-1"
            >
              <small
                class="text-red-500"
              >
                Failed to reach server
              </small>
            </li>
          </ul>
          <button
            aria-label="Login or Sign up"
            class="text-sm font-semibold leading-none text-white focus:outline-none flex justify-center items-center h-10 w-full bg-indigo-700 border rounded hover:bg-indigo-600 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 mt-4"
            type="submit"
          >
            Login or Sign up
          </button>
        </div>
      </div>
    </div>
  </div>
  ;
</DocumentFragment>
`;
